# jobpsych_ai

./: .env.example  .gitignore  .vercelignore  AUTHENTICATION_IMPLEMENTATION.md  AUTH_IMPLEMENTATION_SUMMARY.md  Dockerfile  FRONTEND_INTEGRATION.md  README.md  api-routes-report.md  conftest.py  cors-test.html  cors_test_localhost.html  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements.txt  test_auth_integration.py  test_cors.py  test_cors_quick.py  test_genai.py  test_rate_limit.py  test_services.py  vercel.json
.github/workflows/: dockerhub-push-image.yml  pipeline.yml  tests.yml
app/: main.py
app/dependencies/: auth.py
app/models/: schemas.py
app/routers/: resume_router.py
app/services/: advanced_analyzer.py  advanced_resume_parser.py  candidate_selector.py  job_description_parser.py  question_generator.py  rate_limit_service.py  rate_limiter.py  resume_parser.py  role_recommender.py  similarity_scorer.py  skills_recommender.py
app/services/prompts/: __init__.py  analyze_resume_service.py  base_prompt_service.py  batch_analyze_service.py  candidate_selection_service.py  compare_resumes_service.py  hiredesk_service.py
backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_services.py  test_unit.py
