[project]
name = "backend"
version = "1.0.0"
description = "Resume Analysis and Question Generation Backend"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "python-multipart>=0.0.6",
    "uvicorn>=0.24.0",
    "google-generativeai>=0.7.0",
    "python-docx>=0.8.11",
    "PyPDF2>=3.0.1",
    "python-dotenv>=1.0.0",
    "pdfplumber>=0.10.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
