[project]
name = "backend"
version = "1.0.0"
description = "Resume Analysis and Question Generation Backend"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.12",
  "google-generativeai>=0.8.5",
  "pdfplumber>=0.11.6",
  "pydantic>=2.11.5",
  "pypdf2>=3.0.1",
  "python-docx>=1.1.2",
  "python-dotenv>=1.1.0",
  "python-multipart>=0.0.20",
  "sentence-transformers>=5.1.0",
  "slowapi>=0.1.9",
  "torch>=2.8.0",
  "transformers>=4.56.0",
  "uvicorn>=0.34.2",
    "spacy",
    "torch",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
